@@ -2,6 +2,7 @@
 v3.1.1-git
 ----------
 
+[jan] Restore compatibility with PHP 5.3 (Bug #12306).
 
 
 ------
